--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,11 @@
             <artifactId>argon2-jvm</artifactId>
             <version>2.11</version>
         </dependency>
-
+         <dependency>
+                  <groupId>com.aventrix.jnanoid</groupId>
+                  <artifactId>jnanoid</artifactId>
+                  <version>2.0.0</version>
+         </dependency>
     </dependencies>
 
     <build>
