get collab, get collab info by oid, add collab
fix: add user form itbkk.share into new users table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.datasource.secondary.password=VT4eTSRo
 
 jwt.secret=N7KgseMPtJ26AEved0ahUKEwj4563eioyFAxUyUGwGHbTODx0Q4dUDCBA
 jwt.max-token-interval-hour= 0.5
+
+logging.level.root=INFO
+logging.level.sit.int221.mytasksservice=DEBUG
+
