add: invitation via email (accept, decline)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,17 @@ jwt.max-token-interval-hour= 0.5
 logging.level.root=INFO
 logging.level.sit.int221.mytasksservice=DEBUG
 
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vinzent.vz@gmail.com
+spring.mail.password=lrkjoklvnuasyrkt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Application Configuration
+# get frontend url from app.prop ????????????????? deploy
+#app.frontend.url=https://intproj23.sit.kmutt.ac.th/nw3
+app.frontend.url=http://localhost:5173
+app.team.code=NW3
+
