--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,10 @@
              <artifactId>jnanoid</artifactId>
              <version>2.0.0</version>
          </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
