--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.error.include-stacktrace=never
 # Primary Database Configuration
 spring.datasource.primary.url=jdbc:mysql://localhost:3306/kradan_kanban_itb_kk_v2?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.primary.username=root
-spring.datasource.primary.password=1111
+spring.datasource.primary.password=Merlin_2
 #spring.datasource.primary.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.primary.password=mysql
 #spring.datasource.primary.username=user
